feat: Adds endpoints to health and threadures api
